# smolvlm_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pyrightconfig.json  .ruff.toml  Dockerfile  README.md  docker-compose.build.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
src/: api.py  config.py  exceptions.py  quantize.py  routes.py  schemas.py  vision_service.py
