[project]
name = "smolvlm_api"
version = "1.0.0"
description = "SmolVLM API Service"
requires-python = "==3.12.8"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "transformers>=4.47.0",
    "accelerate>=1.3.0",
    "optimum-quanto>=0.2.6",
    "torch>=2.5.1",
    "Pillow>=11.1.0",
    "python-multipart>=0.0.5",
    "huggingface-hub>=0.26.5",
    "pytest>=8.3.4",
    "requests==2.32.3"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
